# TDDC78-Parallel-Programming

./: .gitignore
Lab1/: CMakeLists.txt
Lab1 (MPI)/CPPTest/: blurfilter.cpp  blurmain.cpp  ppmio.cpp  test1.pbm  thresmain.cpp
Lab1/CPPTest/: CMakeLists.txt  Makefile  Makefile.sgi  a.out  blurfilter.cpp  blurfilter.h  blurmain.cpp  ppmio.cpp  test.pbm  thresfilter.cpp  thresfilter.h  thresmain.cpp
Lab1_MPI/CPPTest/: CMakeLists.txt  blurmain.cpp  run.sh  test.sh  thresfilter.cpp  thresmain.cpp
Lab2_pthreads/CPPTest/: blurfilter.cpp  blurmain.cpp  ppm.cpp  ppm.h  run.sh  thresfilter.cpp  thresfilter.h  thresmain.cpp
Lab3_openmp/: CMakeLists.txt  Makefile  laplsolv.cpp
Lab4_particlesim/: Makefile  definitions.h  main_sequential.cpp  run.sh
